# cargo-build_script_build-parser

./: Cargo.toml  README.md  default.nix  flake.nix
build-rs-libnix/: Cargo.toml
build-rs-libnix/src/: lib.rs
build-rs-libnix/test/: output2  output3  output4  output5  output7
cli/: Cargo.toml
cli/src/: main.rs
src/: main.rs  tests.rs
test/: output1  output5  output6  output7
