[package]
name = "build-rs-libnix"
edition.workspace = true
version.workspace = true
license = "MIT OR Apache-2.0"
license-file = "../LICENSE-THIRD-PARTY"
description = "A command-line utility that extracts `--cfg` and `--check-cfg` flags from `cargo:` build.rs outputs"

[dependencies]
regex = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.16.0"
